# Garmin-Workout-Pipeline

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
garmin_pipeline/: __init__.py  compiler.py  exercises.py  loader.py  mcp_server.py  models.py  pull.py  sync.py  zones.py
tests/: test_compiler.py  test_loader.py  test_models.py  test_zones.py
tests/fixtures/: workout_detail.json
workouts/: zones.yaml
workouts/includes/: warmup-row.yaml
workouts/templates/: hyrox-sim.yaml  hyrox-strength.yaml  speed-400s-300s.yaml
